<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Twitter Client</string>
    <string name="action_settings">Settings</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="hello_world">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volut</string>
    <string name="user_name">20 chars long name!!</string>
    <string name="user_handle">"@15_chars_handle"</string>
    <string name="user_description">"A short personal description of 160 characters or fewer used to define who you are on Twitter. A short personal description of 160 characters or fewer used  ..."</string>
    <string name="time">18 min ago</string>
    <string name="action_compose">Compose Tweet</string>
    <string name="action_view_profile">View Profile</string>
    <string name="title_activity_compose">Compose</string>
    <string name="compose_hint">140 characters or less</string>
    <string name="tweet_btn_label">Tweet </string>
    <string name="cancel_btn_label">Cancel</string>
    <string name="home_tab_title">Home</string>
    <string name="mentions_tab_title">Mentions</string>
    <string name="title_activity_view_profile">Profile</string>
    <string name="sample_count">117268</string>
    <string name="tweets_cnt_label">TWEETS</string>
    <string name="followers_cnt_label">FOLLOWERS</string>
    <string name="following_cnt_label">FOLLOWING</string>
</resources>