<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.simpletwitterclient.app.activities.ViewProfileActivity">

	<FrameLayout android:id="@+id/flHeaderContainer"
			android:layout_width="match_parent"
			android:layout_height="160dp">

		<RelativeLayout android:id="@+id/rlHeader"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_centerHorizontal="true"
				android:layout_alignParentTop="true"
				android:padding="8dp"
				android:background="#75000000">

			<ImageView android:id="@+id/ivProfileImage"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
					android:layout_centerHorizontal="true"
					android:background="@drawable/ic_home"/>

			<TextView android:id="@+id/tvProfileName"
					android:gravity="center"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerHorizontal="true"
					android:layout_below="@+id/ivProfileImage"
					android:textAppearance="?android:attr/textAppearanceMediumInverse"
					android:text="@string/user_name" />

			<TextView android:id="@+id/tvDescription"
					android:gravity="center"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@+id/tvProfileName"
					android:layout_centerHorizontal="true"
					android:layout_marginTop="8dp"
					android:textAppearance="?android:attr/textAppearanceSmallInverse"
					android:text="@string/user_description"
					android:autoLink="all"
					android:linksClickable="true"/>
		</RelativeLayout>
	</FrameLayout>

	<LinearLayout android:id="@+id/llCounts"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/flHeaderContainer"
			android:layout_alignRight="@+id/flHeaderContainer"
			android:layout_marginLeft="16dp"
			android:layout_marginTop="8dp">

		<TextView android:id="@+id/tvTweetsCount"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/sample_count"/>

		<TextView android:id="@+id/tvFollowersCount"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/sample_count"/>

		<TextView android:id="@+id/tvFollowingCount"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/sample_count"/>

	</LinearLayout>

	<LinearLayout android:id="@+id/llLabels"
			android:orientation="horizontal"
			android:gravity="center_horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/llCounts"
			android:layout_alignRight="@+id/flHeaderContainer"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_marginBottom="16dp">

		<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="12sp"
				android:text="@string/tweets_cnt_label"/>

		<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="12sp"
				android:text="@string/followers_cnt_label"/>

		<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:textSize="12sp"
				android:text="@string/following_cnt_label"/>

	</LinearLayout>

	<FrameLayout android:id="@+id/flTimelineContainer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/llCounts"
			android:layout_alignRight="@+id/flHeaderContainer"
			android:layout_marginTop="32dp">
    </FrameLayout>

</RelativeLayout>
