<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
	android:background="@color/gray"
    tools:context="com.codepath.simpletwitterclient.app.activities.ComposeActivity">

    <EditText
		android:id="@+id/etTweet"
        android:layout_width="match_parent"
        android:layout_height="192sp"
		android:inputType="textMultiLine"
		android:hint="@string/compose_hint"
		android:textSize="16sp"
	 />

	<Button
			android:id="@+id/btnCancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/etTweet"
			android:layout_alignLeft="@+id/etTweet"
			android:text="@string/cancel_btn_label"
			android:onClick="cancelTweet"/>

	<TextView
			android:id="@+id/tvCharsLeft"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:layout_below="@+id/etTweet"
			android:layout_toLeftOf="@+id/btnTweet"
			android:layout_alignBaseline="@+id/btnTweet"
			android:layout_marginRight="8dp"
			android:text="0"
			android:textSize="20sp"/>

	<Button
			android:id="@+id/btnTweet"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/etTweet"
			android:layout_alignRight="@+id/etTweet"
			android:paddingRight="6sp"
			android:text="@string/tweet_btn_label"
			android:textColor="@color/gray"
			android:drawableLeft="@drawable/ic_compose"
			android:background="@color/blue"
			android:onClick="sendTweet"/>

</RelativeLayout>
